[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Materials/particle.tres" type="Material" id=2]
[ext_resource path="res://Mesh/ball.msh" type="Mesh" id=3]
[ext_resource path="res://Sound/jump.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sound/die.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sound/acceleration.ogg" type="AudioStream" id=6]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 0.725561, 0.320969, 0.626657 )

[sub_resource type="SphereShape" id=2]

radius = 1.0

[sub_resource type="Animation" id=3]

length = 1.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.7, 0.5, 0.7 ), Vector3( 0.6, 1.1, 0.6 ) ]
}

[sub_resource type="BoxShape" id=4]

extents = Vector3( 0.171634, 0.101157, 0.128776 )

[sub_resource type="CubeMap" id=5]

flags = 7
side/left = Image()
side/right = Image()
side/bottom = Image()
side/top = Image()
side/front = Image()
side/back = Image()
lossy_quality = 0.7

[sub_resource type="Environment" id=6]

ambient_light/enabled = true
ambient_light/color = Color( 0.910156, 0.910156, 0.910156, 1 )
ambient_light/energy = 1.0
fxaa/enabled = true
background/mode = 2
background/color = Color( 0.632843, 0.793165, 0.910156, 1 )
background/cubemap = SubResource( 5 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.09
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 4
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 0.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 1.0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = false
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[node name="Spatial" type="Spatial" groups=[
"player",
]]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )
n_platforms_to_meteorize = 3

[node name="RigidBody" type="RigidBody" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42167, 0 )
shapes/0/trigger = true
collision/layers = 4
collision/mask = 4
mode = 2
mass = 3.06122
friction = 1.0
bounce = 0.0
gravity_scale = 1.5
custom_integrator = false
continuous_cd = false
contacts_reported = 1
contact_monitor = false
sleeping = false
can_sleep = true
axis_lock = 1
velocity/linear = Vector3( 0, 0, 0 )
velocity/angular = Vector3( 0, 0, 0 )
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42167, 0 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Axis" type="Spatial" parent="RigidBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Group" type="Spatial" parent="RigidBody/Axis"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0.10596 )

[node name="Trail" type="Particles" parent="RigidBody/Axis/Group"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 7.89294 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = true
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = ExtResource( 2 )
amount = 20
emitting = true
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0, 0, 0 )
emission_base_velocity = Vector3( 0, 0, 0 )
emission_points = Vector3Array(  )
gravity_normal = Vector3( 0, 0, 0 )
local_coords = false
emit_timeout = 0.0
vars/lifetime = 0.3
vars/spread = 0.0
vars/gravity = 0.0
vars/linear_vel = 0.0
vars/angular_vel = 0.0
vars/linear_accel = 0.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 0.0
vars/initial_size = 0.2
vars/final_size = 0.0
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 0.0
rand/gravity = 0.0
rand/linear_vel = 0.0
rand/angular_vel = 0.0
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 0
phase_0/pos = 0.0
phase_0/color = Color( 1, 1, 1, 1 )
phase_1/pos = 1.0
phase_1/color = Color( 1, 1, 1, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )

[node name="Idle" type="Particles" parent="RigidBody/Axis/Group"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 7.89294 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = true
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = ExtResource( 2 )
amount = 20
emitting = true
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0, 0, 0 )
emission_base_velocity = Vector3( 0, 0, 0 )
emission_points = Vector3Array(  )
gravity_normal = Vector3( 0, 0, 0 )
local_coords = false
emit_timeout = 0.0
vars/lifetime = 0.3
vars/spread = 10.0
vars/gravity = 0.0
vars/linear_vel = 1.0
vars/angular_vel = 0.0
vars/linear_accel = 20.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 0.0
vars/initial_size = 0.2
vars/final_size = 0.0
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 0.0
rand/gravity = 0.0
rand/linear_vel = 0.0
rand/angular_vel = 0.0
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 0
phase_0/pos = 0.0
phase_0/color = Color( 1, 1, 1, 1 )
phase_1/pos = 1.0
phase_1/color = Color( 1, 1, 1, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )

[node name="Die" type="Particles" parent="RigidBody/Axis/Group"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 7.89294 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = true
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = ExtResource( 2 )
amount = 1000
emitting = false
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0, 0, 0 )
emission_base_velocity = Vector3( 0, 0, 0 )
emission_points = Vector3Array(  )
gravity_normal = Vector3( 0, 0, 0 )
local_coords = false
emit_timeout = 0.2
vars/lifetime = 1.0
vars/spread = 10.0
vars/gravity = 9.8
vars/linear_vel = 4.0
vars/angular_vel = 0.0
vars/linear_accel = 50.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 0.0
vars/initial_size = 0.3
vars/final_size = 0.0
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 0.0
rand/gravity = 0.0
rand/linear_vel = 0.0
rand/angular_vel = 0.0
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 0
phase_0/pos = 0.0
phase_0/color = Color( 1, 1, 1, 1 )
phase_1/pos = 1.0
phase_1/color = Color( 1, 1, 1, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )

[node name="Meteor" type="Particles" parent="RigidBody/Axis/Group"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 7.89294 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = true
geometry/billboard_y = true
geometry/depth_scale = true
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = ExtResource( 2 )
amount = 20
emitting = false
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0, 0, 0 )
emission_base_velocity = Vector3( 0, 0, 0 )
emission_points = Vector3Array(  )
gravity_normal = Vector3( 0, 0, 0 )
local_coords = false
emit_timeout = 0.0
vars/lifetime = 0.3
vars/spread = 10.0
vars/gravity = 0.0
vars/linear_vel = 10.0
vars/angular_vel = 0.0
vars/linear_accel = 50.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 0.0
vars/initial_size = 0.3
vars/final_size = 0.0
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 0.0
rand/gravity = 0.0
rand/linear_vel = 0.0
rand/angular_vel = 0.0
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 0
phase_0/pos = 0.0
phase_0/color = Color( 1, 1, 1, 1 )
phase_1/pos = 1.0
phase_1/color = Color( 1, 1, 1, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )

[node name="Splash" type="Particles" parent="RigidBody/Axis/Group"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 7.89294 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = ExtResource( 2 )
amount = 50
emitting = false
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0, 0, 0 )
emission_base_velocity = Vector3( 0, 1, 0 )
emission_points = Vector3Array(  )
gravity_normal = Vector3( 0, -1, 0 )
local_coords = false
emit_timeout = 0.2
vars/lifetime = 0.5
vars/spread = 1.0
vars/gravity = 9.8
vars/linear_vel = 10.0
vars/angular_vel = 0.0
vars/linear_accel = 0.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 0.0
vars/initial_size = 0.2
vars/final_size = 0.0
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 0.0
rand/gravity = 0.0
rand/linear_vel = 0.0
rand/angular_vel = 0.0
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 0
phase_0/pos = 0.0
phase_0/color = Color( 1, 1, 1, 1 )
phase_1/pos = 1.0
phase_1/color = Color( 1, 1, 1, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )

[node name="BigSplash" type="Particles" parent="RigidBody/Axis/Group"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 7.89294 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = false
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = ExtResource( 2 )
amount = 500
emitting = false
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0, 0, 0 )
emission_base_velocity = Vector3( 0, 1, 0 )
emission_points = Vector3Array(  )
gravity_normal = Vector3( 0, -1, 0 )
local_coords = false
emit_timeout = 0.2
vars/lifetime = 1.5
vars/spread = 1.0
vars/gravity = 9.8
vars/linear_vel = 20.0
vars/angular_vel = 0.0
vars/linear_accel = 0.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 0.0
vars/initial_size = 0.2
vars/final_size = 0.0
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 0.0
rand/gravity = 0.0
rand/linear_vel = 0.0
rand/angular_vel = 0.0
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 0
phase_0/pos = 0.0
phase_0/color = Color( 1, 1, 1, 1 )
phase_1/pos = 1.0
phase_1/color = Color( 1, 1, 1, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )

[node name="Area" type="Area" parent="RigidBody/Axis/Group"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0565565, 8.05264 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Transform( 0.019017, 0, 0, 0, 0.019017, 0, 0, 0, 0.019017, 0, -0.594566, -0.108771 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
priority = 100.0
monitoring = true
monitorable = true
collision/layers = 3
collision/mask = 3

[node name="CollisionShape" type="CollisionShape" parent="RigidBody/Axis/Group/Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.019017, 0, 0, 0, 0.019017, 0, 0, 0, 0.019017, 0, -0.594566, -0.108771 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Ball" type="MeshInstance" parent="RigidBody/Axis/Group"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.675, 0, 0, 0, 0.65, 0, 0, 0, 0.675, 0, 0, 7.95683 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 3 )
mesh/skeleton = NodePath("..")
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="RigidBody/Axis/Group/Ball"]

playback/process_mode = 0
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/squeeze = SubResource( 3 )
playback/active = true
playback/speed = 1.1
blend_times = [  ]
autoplay = ""

[node name="OmniLight" type="OmniLight" parent="RigidBody/Axis/Group"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.131386, 0.533863, 7.97447 )
layers = 1
params/enabled = false
params/editor_only = false
params/bake_mode = 0
params/energy = 2.0
colors/diffuse = Color( 0.171875, 1, 0, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.001
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
params/radius = 3.67988
params/attenuation = 1.0

[node name="DecalRayCast" type="RayCast" parent="RigidBody/Axis"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.514403, 3.70208 )
enabled = true
cast_to = Vector3( 0, -1, 0 )
layer_mask = 8
type_mask = 1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="JumpSound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = false
stream/volume_db = 10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="DieSound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 11.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="AccelerationSound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="RigidBody2" type="RigidBody" parent="." groups=[
"camera",
]]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01509, 0.0397879 )
shapes/0/trigger = true
collision/layers = 0
collision/mask = 0
mode = 2
mass = 3.06122
friction = 0.0
bounce = 0.0
gravity_scale = 1.5
custom_integrator = false
continuous_cd = false
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
axis_lock = 1
velocity/linear = Vector3( 0, 0, 0 )
velocity/angular = Vector3( 0, 0, 0 )
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="Area" type="Area" parent="RigidBody2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = false
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01509, 0.0397879 )
shapes/0/trigger = true
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision/layers = 4
collision/mask = 4

[node name="CollisionShape" type="CollisionShape" parent="RigidBody2/Area"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01509, 0.0397879 )
shape = SubResource( 4 )
trigger = true
_update_shape_index = 0

[node name="CameraAxis" type="Spatial" parent="RigidBody2"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Camera_B" type="InterpolatedCamera" parent="RigidBody2/CameraAxis" groups=[
"camera",
]]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.881651, 0.471905, 0, -0.471905, 0.881651, 0.0479576, 6.5581, 17.1744 )
projection = 0
fov = 65.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = SubResource( 6 )
h_offset = 0.0
v_offset = 0.0
target = NodePath("../Ball")
speed = 0.01
enabled = true

[connection signal="body_enter" from="RigidBody/Axis/Group/Area" to="." method="_on_Area_body_enter"]

[connection signal="body_exit" from="RigidBody/Axis/Group/Area" to="." method="_on_Area_body_exit"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="area_enter" from="RigidBody2/Area" to="." method="_on_Area_area_enter"]

[connection signal="area_exit" from="RigidBody2/Area" to="." method="_on_Area_area_exit"]


